# past-exam

./: .coderabbit.yaml  .gitignore  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: backend-cd.yml  backend-ci.yml  backend-dev-ci.yml  dev-backend.yml  dev-frontend.yml  frontend-cd.yml  frontend-ci.yml  r-ci.yml
.husky/: pre-commit
backend/: .air.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  combined_courses_1130_1131.csv  compose.yml  courses.csv  crawler.py  crawler_requirements.txt  dev-compose.yml  go.mod  go.sum  main.go  main.py  nginx.conf  pyproject.toml  template.env
backend/core/: config.py  dependencies.py  interfaces.py  security.py
backend/crud/: auth.py  bookmark.py  comment.py  course.py  file.py  main.py  user.py
backend/db/: db.py
backend/models/: base.py  comment.py  course.py  file.py  user.py
backend/redis_data/appendonlydir/: appendonly.aof.1.base.rdb
backend/routers/: auth.py  bookmark.py  comment.py  course.py  file.py  main.py  user.py
backend/schemas/: auth.py  comment.py  common.py  course.py  file.py  user.py
backend/schemas/comment/: example.py  main.py
backend/services/: auth.py  cache.py  minio.py
backend/tests/: conftest.py  test_file.py
backend/tests/data/: file_data.json
backend/utils/: comment.py
frontend/: Dockerfile  compose.yml  eslint.config.mjs  next.config.js  package.json  pnpm-lock.yaml  readme.md  tailwind.config.ts
frontend/api/: comment.ts
frontend/app/: Loading.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: ExamCard.tsx  FileUploadField.tsx  GlobalNav.tsx  ProfileEdit.tsx  ProfileSidebar.tsx  UploadForm.tsx
frontend/lib/: utils.ts
watchtower/: compose.yml
(+75 files in other folders)
