[tool.poetry]
name = "backend"
version = "0.0.0"
description = ""
authors = ["owenowenisme <mses010108@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
fastapi = "^0.115.0"
SQLAlchemy = "^2.0.35"
pydantic = {extras = ["email"], version = "^2.9.2"}
uvicorn = "^0.31.1"
pydantic-settings = "^2.5.2"
ruff = "^0.6.9"
pre-commit = "^4.0.1"
psycopg2 = "^2.9.10"
python-multipart = "^0.0.17"
google-auth-oauthlib = "^1.2.1"
google-auth = "^2.37.0"
pyjwt = "^2.10.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100  

[tool.ruff.lint]
select = ["E", "F", "I"]  
isort.split-on-trailing-comma=false

[tool.ruff.format]
quote-style = "single"  
skip-magic-trailing-comma = true
